tests/invalid/borrow_conflict/replace_root_while_shared_borrowed.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    let r = (&x) in
    (replace x 2)
}
